k8s/services/inventory/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: inventory
  ports:
    - name: http
      port: 80
      targetPort: http
