k8s/services/inventory/base/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: inventory
  namespace: apps
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: inventory
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
